--- a/src/styles/themes/base.less
+++ b/src/styles/themes/base.less
@@ -1,1 +1,7 @@
-@margin-md: 17px;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body { 
+  font-family: "Twemoji Country Flags", "Helvetica", "Comic Sans", serif;
+}
