--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,10 +1,10 @@
-<nz-layout class="h-full">
+<nz-layout class="min-h-full">
   
   <nz-header>
     <ng-container *ngTemplateOutlet="header"></ng-container>
   </nz-header>
   
-  <nz-content class="h-full py-8 px-16">
+  <nz-content class="py-8 px-16">
     <ng-content></ng-content>
   </nz-content>
 
