--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -23,7 +23,7 @@
       ></nz-avatar>
       
       <nz-page-header-title>
-        Cezeta.
+        {{ headerTitle }}
       </nz-page-header-title>
     </div>
     
