--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,3 +1,5 @@
 <div class="py-8 px-16">
-  <h1>{{ 'projects.title' | translate }}</h1>
+  <div class="flex justify-center w-full">
+    <img class="scale-50" src="assets/images/under-construction.png">
+  </div>
 </div>
