--- a/src/app/core/layouts/main-layout/main-layout.component.scss
+++ b/src/app/core/layouts/main-layout/main-layout.component.scss
@@ -1,3 +1,8 @@
+:host {
+  --pattern-lines: var(--p-content-border-color);
+  --pattern-bg: var(--p-content-background);
+}
+
 .background-pattern {
   width: 100%;
   height: 100%;
