--- a/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/src/app/core/layouts/main-layout/main-layout.component.html
@@ -8,13 +8,12 @@
     <!-- Main content ribbon -->
     <div 
       class="
-        shadow-2xl
         flex flex-col flex-1
         min-h-fit
-        p-6 mx-0 sm:mx-8 md:mx-16
+        p-6 mx-0 sm:mx-8 lg:mx-16
         bg-content-background
-        border-x 
-        border-x-content-hover-background 
+        border-x border-x-content-hover-background
+        shadow-2xl
       "
     >
       <div class="flex-1" >
