--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -1,6 +1,5 @@
-<h1 class="text-center">
+<h1 class="text-center text-xl font-bold">
   Projects
 </h1>
 
-<project-card
-></project-card>
+<project-card></project-card>
