--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 @if (!env.production) {
   <p-chip 
     styleClass="
-      absolute bottom-0 m-2
+      absolute bottom-0 m-2 !z-1000
       !bg-orange-500 !text-gray-950
     "
     label="Development"
