--- a/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/src/app/core/layouts/main-layout/main-layout.component.html
@@ -19,10 +19,10 @@
       <div class="flex-1" >
         <router-outlet />
       </div>
-      <footer></footer>
+      <footer class="pt-0 pb-20 sm:py-2"></footer>
     </div>
   </div>
 </div>
 
 <!-- Background -->
-<div class="absolute -z-1000 top-0 left-0 background-pattern"></div>
+<div class="absolute -z-1000 top-0 left-0 background-pattern min-h-screen"></div>
