--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -2,4 +2,6 @@
   Projects
 </h1>
 
-<project-card></project-card>
+<div class="flex justify-center flex-wrap gap-4 w-full my-4">
+  <project-card></project-card>
+</div>
