--- a/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/src/app/core/layouts/main-layout/main-layout.component.html
@@ -21,6 +21,7 @@
       </div>
       <footer class="pt-0 pb-20 sm:py-2"></footer>
     </div>
+    <p-scrolltop class="absolute bottom-6 right-6" target="parent" [buttonProps]="{ raised: true, rounded: true }"/>
   </div>
 </div>
 
