progress on Home page

--- a/src/app/core/layouts/main-layout/nav-bar/nav-bar.component.html
+++ b/src/app/core/layouts/main-layout/nav-bar/nav-bar.component.html
@@ -50,7 +50,7 @@
           [routerLink]="'/'+tab.route"
         >
           <i [class]="'pi ' + tab.icon"></i>
-          <span>{{ tab.label }}</span>
+          <span>{{ tab.label | translate }}</span>
         </p-tab>
       }
     </p-tablist>
