--- a/src/app/sections/about-me/about-me.component.html
+++ b/src/app/sections/about-me/about-me.component.html
@@ -1,13 +1,6 @@
-<h1 class="text-center text-xl font-bold">
-  About Me
-</h1>
-
-<div class="flex gap-4 w-full my-4">
-  <under-construction class="w-full"></under-construction>
+<div class="flex flex-col gap-8 mx-8">
+  <intro></intro>
+  <resume></resume>
+  <contact-form></contact-form>
+  <under-construction></under-construction>
 </div>
-
-<intro></intro>
-
-<resume></resume>
-
-<contact-form></contact-form>
