--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -1,5 +1,5 @@
 <h1 class="text-center text-xl font-bold">
-  Projects
+  {{ 'projects.title' | translate }}
 </h1>
 
 <div class="flex justify-center flex-wrap gap-4 w-full my-4">
