--- a/src/app/sections/about-me/about-me.component.html
+++ b/src/app/sections/about-me/about-me.component.html
@@ -2,5 +2,5 @@
   <intro></intro>
   <resume></resume>
   <contact-form></contact-form>
-  <under-construction></under-construction>
+  <!-- <under-construction></under-construction> -->
 </div>
