--- a/src/app/core/layouts/main-layout/nav-bar/nav-bar.component.html
+++ b/src/app/core/layouts/main-layout/nav-bar/nav-bar.component.html
@@ -6,14 +6,16 @@
   "
 >
   <ng-template #start>
-    <p-avatar 
-      [image]="avatarSrc()"
-      class="mx-2" 
-      size="large" 
-      shape="circle"
-    />
-    
-    <h1 class="text-xl font-bold">Cezeta.</h1>
+    <div class="inline-flex items-center" (click)="goHome()">
+      <p-avatar
+        [image]="avatarSrc()"
+        class="mx-2" 
+        size="large" 
+        shape="circle"
+      />
+      
+      <h1 class="text-xl font-bold">Cezeta.</h1>
+    </div>
   </ng-template>
   
   <ng-template #center>
