--- a/src/app/sections/about-me/contact/contact-form.component.html
+++ b/src/app/sections/about-me/contact/contact-form.component.html
@@ -4,7 +4,7 @@
 
 <div 
   [formGroup]="contactForm"
-  class="flex flex-col w-full max-w-md mx-auto p-6 gap-8" 
+  class="flex flex-col w-full max-w-md mx-auto gap-8" 
 >
   <!-- Email Field -->
   <cz-text-input
