--- a/src/app/sections/about-me/about-me.component.html
+++ b/src/app/sections/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-8 mx-8">
+<div class="flex flex-col gap-8 justify-center mb-8">
   <intro></intro>
   <resume></resume>
   <contact-form></contact-form>
