--- a/src/app/sections/about-me/intro/intro.component.html
+++ b/src/app/sections/about-me/intro/intro.component.html
@@ -1,5 +1,5 @@
 <div class="inline-flex w-full">
-  <div class="pr-8">
+  <div class="pr-0 md:pr-8">
     <div 
       class="
         flex flex-col gap-2 mb-8 
@@ -7,11 +7,11 @@
         items-center lg:items-start
       "
     >
-      <h3 class="!self-start !text-sm !font-light">
+      <h3 class="!text-sm !font-light">
         {{ 'home.aboutMe.intro1' | translate }}
       </h3>
 
-      <h1 class="!text-[3rem]">
+      <h1 class="!text-[3rem] text-primary">
         Julián Czerweny
       </h1>
 
@@ -33,6 +33,6 @@
 
   <p-image
     src="/assets/images/me.png" alt="Image" width="150"
-    imageClass="w-full rounded-xl shadow-lg"
+    imageClass="hidden md:block w-full rounded-xl shadow-lg"
   />
 </div>
