--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -3,5 +3,7 @@
 </h1>
 
 <div class="flex justify-center flex-wrap gap-4 w-full my-4">
-  <project-card></project-card>
+  <gaslands-project-card></gaslands-project-card>
+  <ng-group-controls-project-card></ng-group-controls-project-card>
+  <fx-exchange-project-card></fx-exchange-project-card>
 </div>
