--- a/src/app/core/components/ui-components/cz-text-input/cz-text-input.component.html
+++ b/src/app/core/components/ui-components/cz-text-input/cz-text-input.component.html
@@ -11,11 +11,11 @@
     >
   </cz-float-label>
 
-  <!-- <nxp-tooltip-badge 
+  <!-- <cz-tooltip-badge 
     class="ml-2 content-center"
     *ngIf="!!tooltip()" 
     [text]="tooltip() ?? ''"
-  ></nxp-tooltip-badge> -->
+  ></cz-tooltip-badge> -->
 </div>
 
 @if (showErrorMessage()) {
