Added email sending

--- a/src/app/sections/about-me/resume/resume.component.html
+++ b/src/app/sections/about-me/resume/resume.component.html
@@ -77,7 +77,7 @@
 
     @if (exp.techs) {
       <ng-template #footer>
-        <div class="inline-flex w-full h-full m-4 gap-4">
+        <div class="inline-flex h-full m-4 gap-4">
           @for (i of exp.techs; track i) {
             <img
               height="32" width="32" 
@@ -170,7 +170,7 @@
 
       @if (exp.techs) {
         <ng-template #footer>
-          <div class="inline-flex w-full h-full m-4 gap-4">
+          <div class="inline-flex h-full m-4 gap-4">
             @for (i of exp.techs; track i) {
               <img
                 height="32" width="32" 
