--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,4 @@
 
 <router-outlet />
 
-<p-toast position="top-left" key="app-alert"/>
+<p-toast styleClass="cz-p-toast" position="top-left" key="app-alert"/>
